# dail_bcknd

./: .env.example  .gitignore  Dockerfile  README.md  The Database of AI Litigation (DAIL) Researcher Guide.docx  alembic.ini  docker-compose.yml  er_diagram.jsx  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_caspio_schema.py  001_initial_schema.py  002_add_document_field.py
api/: index.py  requirements.txt
app/: __init__.py  config.py  database.py  main.py  requirements.txt
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  ai.py  analytics.py  cases.py  citations.py  (+10 more)
app/models/: __init__.py  case.py  court.py  docket.py  document.py  opinion.py  secondary_source.py
app/schemas/: __init__.py  case.py  citation.py  common.py  court.py  docket.py  document.py  judge.py  opinion.py  party.py  search.py  secondary_source.py
app/services/: __init__.py  ai_service.py  citation_service.py  classification_service.py  courtlistener.py  entity_resolution.py  ingestion_service.py  search_service.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/lib/: api.ts  hooks.ts  mock-data.ts
frontend/types/: index.ts
scripts/: create_test_case.py  import_courtlistener.py  migrate_caspio.py  seed_courts.py  seed_from_excel.py  test_courtlistener.py
tests/: conftest.py  test_cases.py  test_courts.py  test_search.py  test_services.py
(+20 files in other folders)
